--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,39 @@
     <title>My First Steps In Git</title>
 </head>
 <body>
-    
+    <div class="header">
+        <img src="images/logo.jpg" alt="logo">
+        <h1>Малышев Артем Сергеевич</h1>
+        <p>1101o</p>
+    </div>
+    <div class="hobby-block" id="hobby-block-1">
+        <h2>Волейбол</h2>
+        <img src="images/volley.jpg" alt="volley">
+        <p>Мне волейбол нравится с детства, хоть я им и не занималься профиссионально, но ходил на каждые тренировки и участвовал во всех соревнованиях. Мне он нравится тем что рост особо роли не играет по сравнению  с баскетболом и бегать надо не так много как в футболе.</p>
+        <p>Если бы у нас в институте были кружки и тренировки , то я с большим удовольствием ходил на него.</p>
+    </div>
+    <div class="hobby-block" id="hobby-block-2">
+        <h2>Рисование</h2>
+        <img src="images/paint.jpg" alt="paint">
+        <p>Рисованием я занимаюсь по настроению, так как времени особо нет на это. выходит довольно не плохо что на бумаге что на компьютере. Иногда рисую на парах когда сделал все задания чтобы скоротить время и немного злюсь когда то что нарисовал мне не нравится.</p>
+        <p>Родители поддерживают все мои увлечения и например к рисованию и фотографированию купили мне графический планшет, чтобы я мог рисовать не только на бумаге , но и на компьютере , а так же обрабатывать фотографии.</p>
+    </div>
+    <div class="hobby-block" id="hobby-block-3">
+        <h2>Фотографирование</h2>
+        <img src="images/cum.jpg" alt="cum">
+        <p>Мне нравятся фотографировать и людей и живатных и природу. У меня есть камера Nikon и 3 дополнительных объектива. Когда я учился на таможенника , то одногрупницы просили сходить с ними и поделать фотографии и обработать их и за это платили небольшую копеечку.</p>
+        <p>В прошлом месяце докупил себе штатив и ходил опробовать его. летом вывез кота на природу и фотографировал его.</p>
+    </div>
+    <div class="footer">
+        <a href="https://github.com/ArtyMaly">
+            <img src="images/git.png" alt="git">
+        </a>
+        <a href="https://vk.com/artymaly">
+            <img src="images/vk.png" alt="vk">
+        </a>
+        <a href="https://www.youtube.com/@artemmalyshev2219">
+            <img src="images/yout.png" alt="yout">
+        </a>
+    </div>
 </body>
 </html>
